<resources>

    <string name="app_name">Noghts and Crosses</string>
    <string name="un_jugador">1 player</string>
    <string name="dos_jugadores">2 players</string>
    <string name="facil">Easy</string>
    <string name="normal">Medium</string>
    <string name="dificil">Hard</string>
    <string name="casilla">Tile</string>
    <string name="circulos_ganan">Circles win!</string>
    <string name="aspas_ganan">Crosses win !</string>
    <string name="empate">Tie !</string>

</resources>
