<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="@dimen/padding_pantalla"
    android:weightSum="1"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="0.3" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/titulo"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/un_jugador"
            style="@style/boton"
            android:text="@string/un_jugador" />

        <RadioGroup
            android:id="@+id/configDifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/facil"
                style="@style/radioboton"
                android:text="@string/facil" />

            <RadioButton
                android:id="@+id/normal"
                style="@style/radioboton"
                android:checked="true"
                android:text="@string/normal" />

            <RadioButton
                android:id="@+id/dificil"
                style="@style/radioboton"
                android:text="@string/dificil" />

        </RadioGroup>

        <Button
            android:id="@+id/dos_jugadores"
            style="@style/boton"
            android:text="@string/dos_jugadores" />

    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="0.3" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:columnCount="3"
        android:gravity="center_horizontal"
        android:rowCount="3">

        <ImageView
            android:id="@+id/a1"
            style="@style/casilla" />

        <ImageView
            android:id="@+id/a2"
            style="@style/casilla" />

        <ImageView
            android:id="@+id/a3"
            style="@style/casilla" />

        <ImageView
            android:id="@+id/b1"
            style="@style/casilla" />

        <ImageView
            android:id="@+id/b2"
            style="@style/casilla" />

        <ImageView
            android:id="@+id/b3"
            style="@style/casilla" />

        <ImageView
            android:id="@+id/c1"
            style="@style/casilla" />

        <ImageView
            android:id="@+id/c2"
            style="@style/casilla" />

        <ImageView
            android:id="@+id/c3"
            style="@style/casilla" />


    </GridLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_weight="0.3" />

</LinearLayout>